update transaction detail view

--- a/templates/transactions/transaction_detail.html
+++ b/templates/transactions/transaction_detail.html
@@ -77,7 +77,20 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row">
+
+                </div>
+            </div>
+
+        </div>
+        <div class="col-xl-6 mb-4 mb-xl-0">
+
+            <div class="card card-modern">
+                <div class="card-header">
+                    <h2 class="card-title"><br></h2>
+                </div>
+                <div class="card-body">
+
+                     <div class="form-row">
                         <div class="form-group col mb-3">
                             <label>Mijoz</label>
                             <div class="date-time-field">
