update transaction list

--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -49,7 +49,7 @@
                             <th class="text-center">Yetqazib berish<br> turi</th>
                             <th class="text-center">Sahifalar soni</th>
                             <th class="text-center">Narx</th>
-                            <th class="text-center">To'lov statusi</th>
+                            <th class="text-center">To'langanlik <br> statusi</th>
                             <th class="text-center">Harakat</th>
 
                         </tr>
