--- a/templates/transactions/transaction_list.html
+++ b/templates/transactions/transaction_list.html
@@ -30,7 +30,7 @@
                             <div class="summary">
                                 <h4 class="title">Naqt</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">{{ company.balance|floatformat:"g" }} so'm</strong>
+                                    <strong class="amount">0 so'm</strong>
                                 </div>
                             </div>
 
@@ -52,7 +52,7 @@
                             <div class="summary">
                                 <h4 class="title">Bank</h4>
                                 <div class="info mt-4">
-                                    <strong class="amount">{{ company.total_debit|floatformat:"g" }} so'm</strong>
+                                    <strong class="amount">0 so'm</strong>
                                 </div>
                             </div>
 
@@ -231,9 +231,4 @@
     <!-- Specific Page Vendor -->
 
     <script src="{% static 'vendor/pnotify/pnotify.custom.js' %}"></script>
-
-
-
-
-
 {% endblock %}
